# NICDAM

./: .gitignore  CITATION.bib  LICENSE  README.md  example.py  pyproject.toml
datamemory/: __init__.py  base.py  data_memory.py
nicdam/: __init__.py  estimator.py  nicdam.py
